disable quick session menu if there is no session

REVIEW: 114769
BUG: 319397
FIXED-IN: 4.13